add header, footer

--- a/src/app/view/shared/footer/footer.component.html
+++ b/src/app/view/shared/footer/footer.component.html
@@ -1,1 +1,136 @@
-<p>footer works!</p>
+<footer class="footer-section">
+  <div class="container">
+    <div class="row">
+      <div class="mouse">
+        <a href="#" class="mouse-icon">
+          <div class="mouse-wheel">
+            <span class="fa-solid fa-chevron-up"></span>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="row mb-5">
+      <div class="col-md">
+        <div class="footer-wrapper mb-4">
+          <h2 class="footer-header">Vegefoods </h2>
+          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+          <ul class="footer-social footer-list">
+            <li class="footer-item">
+              <a href="#">
+                <span class="fa-brands fa-twitter"></span>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="#">
+
+                <span class="fa-brands fa-facebook-f"></span>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="#">
+                <span class="fa-brands fa-instagram"></span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md">
+        <div class="footer-wrapper mb-4 ms-md-5">
+          <h2 class="footer-header">Menu </h2>
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a href="#">
+                Shop
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="#">
+                About
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="#">
+                Journal
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="#">
+                Contact Us
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="footer-wrapper mb-4 ms-md-5">
+          <h2 class="footer-header">Help </h2>
+          <div class="d-flex">
+            <ul class="footer-list me-md-5">
+              <li class="footer-item">
+                <a href="#">
+                  Shipping Information
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="#">
+                  Returns & Exchange
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="#">
+                  Terms & Conditions
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="#">
+                  Privacy Policy
+                </a>
+              </li>
+            </ul>
+            <ul class="footer-list">
+              <li class="footer-item">
+                <a href="#">
+                  FAQs
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="#">
+                  Contact
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md">
+        <div class="footer-wrapper mb-4 ms-md-5">
+          <h2 class="footer-header">Have a Questions? </h2>
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a href="#">
+                <span class="fa-solid fa-location-dot icon"></span>
+                <span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="#">
+                <span class="fa-solid fa-phone icon"></span>
+                <span class="text">+2 392 3929 210</span>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="#">
+                <span class="fa-solid fa-envelope icon"></span>
+                <span class="text">info@yourdomain.com</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="row"></div>
+  </div>
+
+</footer>
