--- a/src/app/view/shared/header/header.component.html
+++ b/src/app/view/shared/header/header.component.html
@@ -1,1 +1,76 @@
-<p>header works!</p>
+<!--header top-->
+<div class="header-top bg-primary  p-1">
+  <div class="container">
+    <div class="row g-0 d-flex">
+      <div class="col-lg-12 d-block">
+        <div class="d-flex row">
+          <div class="col-md pe-4 d-flex align-items-center topper">
+            <div class="icon d-flex align-items-center justify-content-center me-2">
+              <span class="fa-solid fa-phone"></span>
+            </div>
+            <span class="title"> + 1235 2355 98</span>
+          </div>
+          <div class="col-md pe-4 d-flex align-items-center topper">
+            <div class="icon d-flex align-items-center justify-content-center me-2">
+              <span class="fa-solid fa-location-arrow"></span>
+            </div>
+            <span class="title">YOUREMAIL@EMAIL.COM</span>
+          </div>
+
+          <div class="col-md-5 d-flex align-items-center topper text-end">
+            <span class="title">3-5 BUSINESS DAYS DELIVERY & FREE RETURNS</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--nav-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="#">Vegefood </a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+             aria-haspopup="true" aria-expanded="false">
+            Shop
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+        <li class="nav-item text-black">
+          <a class="nav-link" href="#">
+            <span class="fa-solid fa-cart-shopping"></span>
+            [0]
+          </a>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+</nav>
