--- a/src/app/view/component/carousel/carousel.component.html
+++ b/src/app/view/component/carousel/carousel.component.html
@@ -1,6 +1,7 @@
 <section class="slide-section">
-  <div clas="home-slider owl-carousel">
-    <div> Slide</div>
+  <div class="home-slide">
+    <div class="slide-background">
+    </div>
 
   </div>
 </section>
