--- a/src/app/view/page/home/home.component.html
+++ b/src/app/view/page/home/home.component.html
@@ -1,3 +1,5 @@
 <app-carousel></app-carousel>
 <app-services></app-services>
 <app-categories></app-categories>
+<app-featured></app-featured>
+<app-count-down></app-count-down>
